add DRAFT watermark

--- a/fcthesis.sty
+++ b/fcthesis.sty
@@ -57,7 +57,7 @@
         \end{center}
         \vfill
         \centerline{
-        \includegraphics{feup.pdf}
+        \includegraphics{feup-logo.png}
         }
         \vfill
         \begin{center}
