--- a/tese.tex
+++ b/tese.tex
@@ -18,6 +18,12 @@
 %\usepackage{fancyhdr} % para cabeçalhos mais elaborados
 \usepackage{subfig}
 \usepackage{amsthm}
+\usepackage[firstpage]{draftwatermark}
+
+\SetWatermarkScale{8}
+\SetWatermarkAngle{45}
+\SetWatermarkFontSize{72pt}
+\SetWatermarkText{DRAFT}
 
 \newtheorem{pruning_obs}{Observation}
 
