adicionar o meu artigo

--- a/references.bib
+++ b/references.bib
@@ -702,6 +702,19 @@
   year =      {2007},
   OPTaddress =   {Porto, Potugal},
 }
+
+@InProceedings{cruz-jelia10,
+  author =    {F. Cruz and R. Rocha},
+  title =     {{Retroactive Subsumption-Based Tabled Evaluation of Logic Programs}},
+  booktitle = {Proceedings of the 12th European Conference on Logics in Artificial Intelligence, JELIA'2010},
+  series =    {LNCS},
+  publisher = {Springer-Verlag},
+  editor =    {T. Janhunen and I. Niemelä},
+  month =     {September},
+  year =      {2010},
+  address =   {Helsinki, Finland},
+}
+
 % ----- D -----
 @InProceedings{Damasio-00,
   author =    {C. Damásio},
@@ -1304,8 +1317,6 @@
   year =      {2000},
   OPTaddress =   {Vigo, Spain},
 }
-
-
 
 % ----- K -----
 @Phdthesis{Karlsson-PhD,
